--- a/my_site/templates/my_site/contact.html
+++ b/my_site/templates/my_site/contact.html
@@ -1,4 +1,4 @@
-{% extends "sevilla/base.html" %}
+{% extends "my_site/base.html" %}
 {% block content %}{% load i18n %}
 {% if form %}
 <h2> {% trans 'Get in Touch with Me!' %}</h2>
