--- a/my_site/templates/my_site/error.html
+++ b/my_site/templates/my_site/error.html
@@ -1,4 +1,4 @@
-{% extends "sevilla/base.html" %}
+{% extends "my_site/base.html" %}
 {% block content %}{% load i18n %}
 <div id="error" class="w3-panel w3-border w3-border-red w3-round-xlarge w3-hover-border-blue w3-justify">
 <h2 align="center">{% trans 'There has been an error processing your request' %}</h2>
