--- a/my_site/templates/my_site/base.html
+++ b/my_site/templates/my_site/base.html
@@ -8,7 +8,7 @@
     <title>{{ page_title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'sevilla/css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'my_site/css/style.css' %}">
     <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}/favicon.ico"/>
     <style>
     </style>
@@ -18,11 +18,11 @@
 
 <div id="page" class="w3-block w3-mobile w3-light-grey">
   <!-- CONTACT BAR -->
-  {% include 'sevilla/contact_bar.html' %}
+  {% include 'my_site/contact_bar.html' %}
   <!-- BANNER -->
-  {% include 'sevilla/carousel.html' %}
+  {% include 'my_site/carousel.html' %}
   <!-- NAVIGATION BAR -->
-  {% include 'sevilla/navbar.html' %}
+  {% include 'my_site/navbar.html' %}
   <div id="content" class="w3-container w3-white w3-center" >
   <!-- CONTENT -->
   {% block content %}{% endblock %}
@@ -33,7 +33,7 @@
           <h2 align="center">{% trans 'Get in Touch!' %}</h2>
     <div class="w3-panel w3-border w3-border-red w3-round-xlarge w3-hover-border-blue w3-justify w3-center">
         <br/>
-    <form action="{% url 'sevilla:contact' %}" method="post">
+    <form action="{% url 'my_site:contact' %}" method="post">
         {% csrf_token %}
         <table>
             {{footer_form}}
@@ -47,9 +47,8 @@
   <div class="w3-center">
     <a href="/general-conditions">{% trans 'General conditions | Privacy Policy | Cookies Policy' %}</a>
   </div>
-  <div class="w3-center"><p>&copy; 2019 iShowUSevilla.com<p></div>
 </div>
 </div>
-<script type="text/javascript" src = "{% static 'sevilla/js/script.js' %}"></script>
+<script type="text/javascript" src = "{% static 'my_site/js/script.js' %}"></script>
 </body>
 </html>
