--- a/my_site/templates/my_site/carousel.html
+++ b/my_site/templates/my_site/carousel.html
@@ -7,7 +7,7 @@
           </div>
         {% endfor %}
           <div id="carousel-logo" class="w3-display-topleft">
-        <a href="{% url 'sevilla:base' %}">
+        <a href="{% url 'my_site:base' %}">
           <img src="{{ MEDIA_URL }}logo.png" class="w3-image" />
         </a>
       </div>
