--- a/my_site/templates/my_site/contact_bar.html
+++ b/my_site/templates/my_site/contact_bar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div id="contact-bar" class="contact-bar" >
 	<div id="ishow-contact-bar" class="contact-bar w3-bar">
-		<img class="w3-image" src="{{ MEDIA_URL }}favicon.png"/> #1 Flamenco Lessons </a>
+		<img class="w3-image" src="{{ MEDIA_URL }}favicon.png"/>
 	{% if all_contacts %}
 		{% for contact in all_contacts %}
 		<a href="{{contact.link}}" class="w3-bar-item  w3-hover-cyan" target="_blank" title="{{contact.text}}"><i class="{{contact.icon}}"></i></a>
