--- a/my_site/templates/my_site/contact_bar.html
+++ b/my_site/templates/my_site/contact_bar.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 <div id="contact-bar" class="contact-bar" >
 	<div id="ishow-contact-bar" class="contact-bar w3-bar">
 		<img class="w3-image" src="{{ MEDIA_URL }}favicon.png"/>
