template cleanup of ishowu stuff

--- a/my_site/templates/my_site/base.html
+++ b/my_site/templates/my_site/base.html
@@ -39,7 +39,7 @@
             {{footer_form}}
         </table>
         <br/>
-        <input type="submit" value="Submit">
+        <input type="submit" value="{% trans 'Submit' %}">
     </form>
         <br/>
     </div>
