--- a/my_site/templates/my_site/contact_bar.html
+++ b/my_site/templates/my_site/contact_bar.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <div id="contact-bar" class="contact-bar" >
-	<div id="ishow-contact-bar" class="contact-bar w3-bar">
+	<div class="contact-bar w3-bar">
 		<img class="w3-image" src="{{ MEDIA_URL }}favicon.png"/>
 	{% if all_contacts %}
 		{% for contact in all_contacts %}
