--- a/my_site/templates/my_site/contact.html
+++ b/my_site/templates/my_site/contact.html
@@ -1,10 +1,10 @@
 {% extends "my_site/base.html" %}
 {% block content %}{% load i18n %}
 {% if form %}
-<h2> {% trans 'Get in Touch with Me!' %}</h2>
+<h2> {% trans 'Get in Touch with Us!' %}</h2>
 <div class="w3-panel w3-border w3-border-red w3-round-xlarge w3-hover-border-blue w3-justify w3-center">
     <br/>
-<form action="{% url 'sevilla:contact' %}" method="post">
+<form action="{% url 'my_site:contact' %}" method="post">
     {% csrf_token %}
     <table>
         {{form}}
