--- a/my_site/static/my_site/css/style.css
+++ b/my_site/static/my_site/css/style.css
@@ -39,6 +39,10 @@ html,body
  font-size: 14px;
 }
 
+.contact-bar img {
+  width:25px;
+}
+
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
  position: fixed;
