--- a/my_site/templates/my_site/base.html
+++ b/my_site/templates/my_site/base.html
@@ -46,6 +46,7 @@
   </div>
   {% endif %}
 </div>
-<script type="text/javascript" src = "{% static 'my_site/js/script.js' %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src = "{% static 'my_site/js/test.js' %}"></script>
 </body>
 </html>
