--- a/my_site/templates/my_site/contact_bar.html
+++ b/my_site/templates/my_site/contact_bar.html
@@ -7,8 +7,6 @@
 		<a href="{{contact.link}}" class="w3-bar-item  w3-hover-cyan" target="_blank" title="{{contact.text}}"><i class="{{contact.icon}}"></i></a>
 		{% endfor %}
 	{% endif %}
-		<a href="javascript:void(0);" class="w3-bar-item contact-burger w3-hover-cyan" onclick="fold_contact_buttons();">
-		<i class="fa fa-bars"></i>
-		</a>
+		<span class="w3-bar-item contact-burger w3-hover-cyan"><i class="fa fa-bars"></i></span>
 	</div>
   </div>
