bar burgers working

--- a/my_site/templates/my_site/contact_bar.html
+++ b/my_site/templates/my_site/contact_bar.html
@@ -7,6 +7,7 @@
 		<a href="{{contact.link}}" class="w3-bar-item  w3-hover-cyan" target="_blank" title="{{contact.text}}"><i class="{{contact.icon}}"></i></a>
 		{% endfor %}
 	{% endif %}
-		<span class="w3-bar-item contact-burger w3-hover-cyan"><i class="fa fa-bars"></i></span>
-	</div>
+		<button id="contact-burger" class="w3-bar-item contact-burger w3-hover-cyan">
+			<i class="fa fa-bars"></i>
+		</button>	</div>
   </div>
