--- a/my_site/templates/my_site/navbar.html
+++ b/my_site/templates/my_site/navbar.html
@@ -25,8 +25,8 @@
         {% endfor %}
         <a href="{% url 'my_site:contact' %}" class="navbar-item w3-bar-item w3-button w3-hover-cyan">{% trans 'Contact' %}</a>
         {% endif %}
-        <a href="javascript:void(0);" class="w3-bar-item navbar-burger w3-hover-cyan" onclick="fold_nav_buttons()">
+		<button id="navbar-burger" class="w3-bar-item navbar-burger w3-hover-cyan">
 			<i class="fa fa-bars"></i>
-		</a>
+		</button>
     </div>
 </div>
