--- a/my_site/static/my_site/css/style.css
+++ b/my_site/static/my_site/css/style.css
@@ -126,7 +126,7 @@ html,body
   .contact-bar a:not(.show-me) {
     display: none;
   }
-  .contact-bar .contact-burger {
+  .contact-bar button.contact-burger {
     float: right;
     display: block;
   }
@@ -134,10 +134,13 @@ html,body
   .contact-bar.responsive {
     position: relative;
   }
-  .contact-bar.responsive .contact-burger {
+  .contact-bar.responsive button.contact-burger {
     position: absolute;
     right: 0;
     top: 0;
+    float: none;
+    display: block;
+    text-align: left;
   }
   .contact-bar.responsive a {
     float: none;
@@ -152,17 +155,20 @@ html,body
   .navbar .navbar-item:not(.show-me) {
     display: none;
   }
-  .navbar a.navbar-burger {
+  .navbar button.navbar-burger {
     float: right;
     display: block;
   }
   .navbar.responsive {
     position: relative;
   }
-  .navbar.responsive .navbar-burger {
+  .navbar.responsive button.navbar-burger {
     position: absolute;
     right: 0;
     top: 0;
+    float: none;
+    display: block;
+    text-align: left;
   }
   .navbar.responsive a {
     float: none;
