not managing to redo the slide show in jquery, yet

--- a/my_site/templates/my_site/base.html
+++ b/my_site/templates/my_site/base.html
@@ -46,6 +46,9 @@
   </div>
   {% endif %}
 </div>
+<audio id="chime" >
+   <source src="{{MEDIA_URL}}chime.mp3" type="audio/mp3"/>
+</audio>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src = "{% static 'my_site/js/test.js' %}"></script>
 </body>
